# vibe-gtm

./: .gitignore  CLAUDE.md  README.md  render.yaml  specs_google.md
.claude/: settings.json
.claude/commands/: pr.md  prd.md  story.md
backend/: .env.example  config.py  database.py  main.py  person_claims.json  pyproject.toml
backend/crawling/: hallucination_checker.py  person_crawler.py  schemas.py
backend/docs/: firecrawl_docs.md
backend/proposal/: __init__.py  generator.py  matcher.py  schemas.py
backend/routers/: campaigns.py  extraction.py  identity.py  leads.py  proposal.py  proposals.py  webhooks.py
backend/schemas/: campaign.py  leads.py  profile.py  proposal.py
backend/search_extract/: __init__.py  collector.py  extractor.py  hallucination_checker.py  pipeline.py  pipeline_async.py  schemas.py  searcher.py
backend/services/: campaign.py  email.py  extraction_task.py  reducto.py
docs/: PRD-VibeGTM.md  PROPOSALS_FLOW.md  PROPOSAL_PLAN.md  VibeGTM.md
docs/stories/: GTM-1-identity-injection.md  GTM-1.2-campaign-sidebar-persistence.md  GTM-2-tabbed-interface-leads-input.md  GTM-3-parallel-lead-extraction.md  GTM-4-matching-proposals.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: campaigns.ts  identity.ts  leads.ts  proposals.ts
frontend/src/components/: CyberCampaignSidebar.tsx  CyberCreateCampaignModal.tsx  CyberEmptyState.tsx  CyberFileDropZone.tsx  CyberLeadsInput.tsx  CyberProfileCard.tsx  CyberProposals.tsx  CyberSocialUrlsInput.tsx  (+6 more)
(+6 files in other folders)
